samples/_failures_safe/1761185748_50bf59_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f1503f5d.c: In function ‘matrix_multiply’:
./samples/SAFE/__tmp_f1503f5d.c:118:21: error: expected declaration or statement at end of input
  118 |                     return 0;
      |                     ^~~~~~
./samples/SAFE/__tmp_f1503f5d.c:118:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f1503f5d.c:118:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f1503f5d.c:118:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f1503f5d.c:118:21: error: expected declaration or statement at end of input
